# skycam-utils

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  AGENTS.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pytest.yml
claude_docs/gplots/: 2026-02-18_horizon.csv
claude_docs/scripts/: README.md  alcor_horizon_extract.py  alcor_median_stack.py  ensemble_extinction.py  gaussian_vs_aperture.py  horizon_auto_mask.py  horizon_floodfill.py  make_fig1redo.py  make_plots2.py  make_wcs_overlay_fig.py  nonlin_binned.py  nonlin_correction.py  nonlin_deficit2.py  nonlin_truemag.py  radius_test.py  sobel_vs_undetected.py  zeropoint_calib.py
claude_docs/skycam_utils/: index.rst
claude_docs/superpowers/plans/: 2026-06-06-alcor-wcs-refinement.md  2026-06-07-alcor-matcher-hardening.md  2026-06-14-alcor-gaussian-photometry.md  2026-06-20-alcor-horizon-mask-cli.md
claude_docs/superpowers/specs/: 2026-06-06-alcor-wcs-refinement-design.md  2026-06-07-alcor-matcher-hardening-design.md  2026-06-11-alcor-axis-tilt-design.md  2026-06-14-alcor-gaussian-photometry-design.md  2026-06-20-alcor-horizon-mask-cli-design.md
docs/: bad_pixel_masks.rst  conf.py  horizon_mask.rst  index.rst  installation.rst  photometry.rst  sky_brightness.rst  wcs_calibration.rst
docs/_static/: custom.css
docs/reference/: index.rst
docs/scripts/: README.md  horizon_undetected_stars.py  make_fig1_both.py  make_fig1clean.py  make_plots.py  nonlin_beta.py  nonlin_combined.py  nonlin_linear.py  nonlin_peak.py
docs/superpowers/plans/: 2026-06-06-alcor-wcs-refinement.md  2026-06-07-alcor-matcher-hardening.md  2026-06-07-alcor-wcs-calibration-library.md  2026-06-09-alcor-badpix-epoch-mask.md  2026-06-10-alcor-tangential-distortion.md  2026-06-10-alcor-wcs-driven-load.md  2026-06-11-alcor-axis-tilt.md
docs/superpowers/specs/: 2026-06-06-alcor-wcs-refinement-design.md  2026-06-07-alcor-wcs-calibration-library-design.md  2026-06-09-alcor-badpix-epoch-mask-design.md  2026-06-10-alcor-tangential-distortion-design.md  2026-06-10-alcor-wcs-driven-load-design.md  2026-06-12-alcor-collect-photometry-design.md
licenses/: LICENSE.rst  README.rst
notebooks/: ASI1600 skycam reduce.ipynb  new_skycam.ipynb
scripts/: daily_movies.sh  iers.py  latest_image.sh  latest_movie.sh  make_movies.sh  mmt_position.py  tcs_logger.py
skycam_utils/: __init__.py  alcor.py  astrometry.py  fit_wcs.py  photometry.py  pipeline.py
skycam_utils/data/: bright_star_sloan.fits  bright_star_sloan_named.fits  mask_2011.fits  mask_2016.fits  mask_2017_2020.fits  skycam_stars.csv  star_names.csv  wcs_2011.fits  wcs_2016.fits  wcs_2019.fits
skycam_utils/tests/: test_alcor.py  test_alcor_badpix.py  test_alcor_horizon.py  test_alcor_skybright.py  test_alcor_wcs.py
