[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "skycam_utils"
description = "Utilities for analyzing all-sky camera data"
readme = "README.rst"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "T. E. Pickering", email = "te.pickering@gmail.com" },
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "astropy",
    "astropy-iers-data",
    "numpy",
    "matplotlib",
    "photutils",
    "scikit-image",
    "ccdproc",
    "pandas",
    "redis",
    "regions",
]

[project.urls]
Homepage = "https://github.com/tepickering/skycam-utils"

[project.optional-dependencies]
docs = [
    # The Read the Docs theme plus sphinx-astropy's extension/intersphinx
    # machinery (autodoc, automodapi, numpydoc, jquery). sphinx-copybutton is
    # listed explicitly because conf.v2's extension list references it but it
    # only ships in sphinx-astropy's confv2/confv3 theme extras, which we drop.
    "sphinx-astropy>=1.11",
    "sphinx-copybutton",
    "sphinx-rtd-theme>=3.0",
]
test = [
    "pytest",
    "pytest-astropy",
    "pytest-cov",
]
extra = [
    "jupyter",
    "ipykernel",
    "ipympl",
]

[project.scripts]
process_stellacam_dir = "skycam_utils.pipeline:process_stellacam_dir"
alcor_proc_fits = "skycam_utils.alcor:alcor_proc_fits_cli"
alcor_keogram = "skycam_utils.alcor:alcor_keogram_cli"
plot_alcor_keogram_fits = "skycam_utils.alcor:plot_alcor_keogram_fits_cli"
plot_alcor_fits = "skycam_utils.alcor:plot_alcor_fits_cli"
plot_alcor_sky_brightness = "skycam_utils.alcor:plot_alcor_sky_brightness_cli"
alcor_star_photometry = "skycam_utils.alcor:alcor_star_photometry_cli"
fit_alcor_wcs = "skycam_utils.alcor:fit_alcor_wcs_cli"
create_badpix_mask = "skycam_utils.alcor:create_badpix_mask_cli"
alcor_median_stack = "skycam_utils.alcor:alcor_median_stack_cli"

[tool.setuptools.packages.find]
include = ["skycam_utils*"]

[tool.setuptools.package-data]
skycam_utils = ["data/*", "data/badpix/*", "data/horizon/*"]

[tool.setuptools_scm]
version_file = "skycam_utils/_version.py"

[tool.pytest.ini_options]
testpaths = ["skycam_utils", "docs"]
astropy_header = true
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-rst"

[tool.coverage.run]
branch = true
omit = [
    "skycam_utils/_version.py",
    "skycam_utils/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "def _ipython_key_completions_",
]
